--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
 
     <script type="text/babel">
+      marked.setOptions({
+        breaks:true
+      })
+      
       class App extends React.Component{
         constructor(props){
           super(props)
