--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         render(){
           return(
-            <div className="d-flex justify-content-around mt-3">
+            <div className="d-flex justify-content-around mt-3 container">
             
               <div>
               
